[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kukapy"
version = "0.1.0"
description = "Python client for KUKA robots via EthernetKRL (EKI)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Repository = "https://github.com/JasonLvernex/KukaPy"
